--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
                     <label for="issueAssaignedToInput">Assaigned To</label>
                     <input type="text" class="form-control" id="issueAssaignedToInput" placeholder="Enter Responsible...">
                 </div>
+                <button type="submit" class="btn btn-primary">Add</button>
             </form>
+        </div>
+        <div class="col-lg-12">
+            <div id="issueList">
+                
+            </div>
         </div>
     </div>
     
