added javascript part

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                 
             </div>
         </div>
+        <div class="footer">
+            <p>&copy GokulEdix2019</p>
+        </div>
     </div>
     
     <script src="https://chancejs.com/chance.min.js"></script>
