--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>ShareNote</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 </head>
@@ -12,39 +12,39 @@
     <div class="container">
         <h1>ShareNote <small>created by Gokul</small></h1>
         <div class="jumbotron">
-            <h3>Add new Issue:</h3>
+            <h3>Add new Note:</h3>
             <form id="issueInputForm">
                 <div class="form-group">
-                    <label for="issueDescInput">Description</label>
+                    <label for="issueDescInput">Title</label>
                     <input type="text" class="form-control" id="issueDescInput" placeholder="Describe the issue">
                 </div>
                 <div class="form-group">
-                    <label for="issueSeverityInput">Severity</label>
+                    <label for="issueSeverityInput">Tag</label>
                     <select id="issueSeverityInput" class="form-control">
-                        <option value="Low">Low</option>
-                        <option value="Medium">Medium</option>
-                        <option value="High">High</option>
+                        <option value="Low">Lecture</option>
+                        <option value="Medium">Exercise</option>
+                        <option value="High">Laborotory</option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="issueAssaignedToInput">Assaigned To</label>
-                    <input type="text" class="form-control" id="issueAssaignedToInput" placeholder="Enter Responsible...">
+                    <label for="issueAssignedToInput">Subject</label>
+                    <input type="text" class="form-control" id="issueAssignedToInput" placeholder="Enter Responsible...">
                 </div>
                 <button type="submit" class="btn btn-primary">Add</button>
             </form>
         </div>
         <div class="col-lg-12">
-            <div id="issueList">
+            <div id="issuesList">
                 
             </div>
         </div>
         <div class="footer">
-            <p>&copy GokulEdix2019</p>
+            <p>&copy Sharenote2019</p>
         </div>
     </div>
     
     <script src="https://chancejs.com/chance.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </body>
