making the later created app a notesharing app for my uni

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <h1>ShareNote <small>created by Gokul</small></h1>
         <div class="jumbotron">
             <h3>Add new Note:</h3>
-            <form id="issueInputForm">
+            <form id="noteInputForm">
                 <div class="form-group">
-                    <label for="issueDescInput">Title</label>
-                    <input type="text" class="form-control" id="issueDescInput" placeholder="Describe the issue">
+                    <label for="noteTitleInput">Title</label>
+                    <input type="text" class="form-control" id="noteTitleInput" placeholder="Describe the issue">
                 </div>
                 <div class="form-group">
                     <label for="issueSeverityInput">Tag</label>
